--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@polkadot-api/descriptors": "^0.0.1",
     "polkadot-api": "^0.8.0",
+    "primeflex": "^3.3.1",
     "primevue": "^3.52.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.3"
