--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -29,6 +29,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v4
       - name: Install Bun
       - uses: oven-sh/setup-bun@v1
         with:
