--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "postinstall" : "npx papi add dot -n polkadot && npx papi"
+    "postinstall" : "npx papi"
   },
   "dependencies": {
     "@polkadot-api/descriptors": "^0.0.1",
