--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "postinstall" : "npx papi"
+    "postinstall": "npx papi"
   },
   "dependencies": {
     "@polkadot-api/descriptors": "^0.0.1",
+    "@polkadot/util": "^12.6.2",
     "polkadot-api": "^0.8.0",
     "primeflex": "^3.3.1",
     "primevue": "^3.52.0",
