--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@polkadot/util": "^12.6.2",
     "polkadot-api": "^0.8.0",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.3"
